[fixed] Fix Option component text overflow

--- a/src/cypd.css
+++ b/src/cypd.css
@@ -624,7 +624,8 @@ body {
 }
 
 .cypd-input::placeholder {
-    color: var(--default-gray-color);
+    /* color: var(--default-gray-color); */
+    color: rgb(49, 49, 49);
 }
 
 .cypd-input:hover {
@@ -684,11 +685,12 @@ body {
 }
 
 .cypd-select-wrapper .cypd-select::placeholder {
-    color: var(--default-deepgray-color);
+    /* color: var(--default-deepgray-color); */
+    color: rgb(49, 49, 49);
 }
 
 .cypd-options-container {
-    position: absolute;
+    /* position: absolute;
     width: 100%;
     overflow: hidden;
     border-radius: 3px;
@@ -697,12 +699,32 @@ body {
     opacity: 1;
     z-index: 21;
     box-shadow: 0px 0px 4px var(--default-cyp-blue-active);
-    transition: transform var(--default-transition-duration), opacity var(--default-transition-duration) 50ms;
+    transition: transform var(--default-transition-duration), opacity var(--default-transition-duration) 50ms; */
+    position: absolute;
+    top: var(--default-select-normal-height);
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    border-radius: 3px;
+    max-height: 3000px;
+    height: auto;
+    z-index: 21;
+    box-shadow: 0px 3px 6px #00000029;
+    transition: max-height var(--default-transition-duration);
+}
+
+.cypd-select-wrapper.small .cypd-options-container {
+    top: var(--default-select-small-height);
 }
 
 .cypd-options-container.extend-top {
-    transform: scaleY(1) translateY(calc(-100% - var(--default-select-normal-height) - 2px));
+    transform: translateY(calc(-100% - var(--default-select-normal-height) - 2px));
     transform-origin: bottom;
+    box-shadow: 0px -3px 6px #0000005f;
+}
+
+.cypd-select-wrapper.small .cypd-options-container.extend-top {
+    transform: translateY(calc(-100% - var(--default-select-small-height) - 2px));
 }
 
 .cypd-options-container.limit-height {
@@ -710,10 +732,12 @@ body {
 }
 
 .cypd-options-container.collapsed {
-    opacity: 0;
+    /* opacity: 0;
     height: 0;
     transform: scaleY(0);
-    transition: transform var(--default-transition-duration), opacity var(--default-transition-duration) 150ms;
+    transition: transform var(--default-transition-duration), opacity var(--default-transition-duration) 150ms; */
+    max-height: 0;
+    height: 0;
 }
 
 .cypd-options-wrapper {
@@ -748,6 +772,9 @@ body {
     transition: background-color var(--default-transition-duration), color var(--default-transition-duration);
     color: black;
     background-color: white;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .cypd-select-wrapper.small .cypd-option label {
@@ -1777,13 +1804,12 @@ svg.cypd-icon:not([class*='fc-']) * {
     position: relative;
     width: 250px;
     border-radius: 5px;
-    border: 1px solid var(--default-cyp-blue-active);
     padding: 5px;
     margin-top: 2px;
     margin-bottom: 2px;
     background: white;
     z-index: 11;
-    box-shadow: 0px 0px 2px var(--default-cyp-blue-hover);
+    box-shadow: 0px 3px 6px #00000029;
 }
 
 .react-calendar button {
@@ -1883,21 +1909,18 @@ button.react-calendar__century-view__decades__decade {
 .cypd-digital-clock-wrapper.clock-system .cypd-select-wrapper.meridiem .cypd-options-container,
 .cypd-digital-clock-wrapper .cypd-select-wrapper.hr .cypd-options-container {
     border-radius: 3px 0 0 3px;
-    box-shadow: -1px 1px 2px 0px var(--default-cyp-blue-active);
+    box-shadow: 0 3px 6px #00000029;
 }
 
 .cypd-digital-clock-wrapper.clock-system .cypd-select-wrapper.hr .cypd-options-container,
 .cypd-digital-clock-wrapper .cypd-select-wrapper.min .cypd-options-container {
     border-radius: 0;
-    border-left: 1 solid var(--default-cyp-blue-active);
-    border-right: 1 solid var(--default-cyp-blue-active);
-    box-shadow: 1px 1px 2px 0px var(--default-cyp-blue-active);
+    box-shadow: 0 3px 6px #00000029;
 }
 
 .cypd-digital-clock-wrapper .cypd-select-wrapper.sec .cypd-options-container {
     border-radius: 0 3px 3px 0;
-    border-left: 1 solid var(--default-cyp-blue-active);
-    box-shadow: 1px 1px 2px 0px var(--default-cyp-blue-active);
+    box-shadow: 0 3px 6px #00000029;
 }
 
 .cypd-digital-clock-wrapper .cypd-icon-wrapper {
